--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 body {
-background-color: powderblue
-
+    background-color: powderblue;
 }
 
 h1 {
-  font-family: IMPACT
+    font-family: Impact, sans-serif;
+    text-align: center;
 }
 
 p {
-  font-family: IMPACT
-  font-size: 20
+    font-family: Impact, sans-serif;
+    font-size: 20px;
 }
