--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,12 @@ body {
 }
 
 h1 {
-    font-family: Impact;
+    font-family: Impact
     text-align: center;
 }
 
 p {
-    font-family: Impact;
-    text-align: center;
+    font-family: Impact
+    text-align: center
     color: white; /* Corrected from 'font-color' to 'color' */
 }
